<resources>
    <!-- App name -->
    <string name="app_name">Yet Another Notes App</string>
    <!-- Navigation drawer buttons-->
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="folders">Folders</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <!-- Text that appears when the note/task/folder list is empty -->
    <string name="no_notes">Your notes will appear here</string>
    <string name="no_folders">Your folders will appear here</string>
    <string name="no_tasks">Your tasks will appear here</string>
    <string name="no_trash">Your deleted notes will appear here</string>
    <!-- Placeholder text -->
    <string name="hello_blank_fragment">This feature is yet to be implemented</string>
    <!-- Create action -->
    <string name="create_note">New note</string>
    <string name="create_task">New task</string>
    <string name="create_folder">New folder</string>
    <!-- Add action-->
    <string name="add_note">Add a note</string>
    <string name="add_task">Add a task</string>
    <string name="add_folder">Add a folder</string>
    <!-- Basic actions -->
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="empty_list">Empty list</string>
    <string name="add_image">Add image</string>
    <string name="set_reminder">Set a reminder</string>

    <string name="note_title">Title</string>
    <string name="note_content">Note</string>

</resources>